# urban-move-api

./: .env.example  .gitignore  pyproject.toml  skills-lock.json  test_sptrans.py
alembic/: env.py
alembic/versions/: ac61dd81f6ea_add_operator_to_routes.py  febbeb92ab7d_initial_schema.py
src/: main.py
src/core/config/: env.py
src/core/db/: database.py
src/core/db/models/: __init__.py  enums.py  favorite_route.py  rating.py  report.py  route.py  stop.py  stop_prediction.py  trip.py  vehicle.py  vehicle_position.py
src/core/security/: jwt.py
src/modules/auth/: dependencies.py
src/modules/mobility/: router.py
src/modules/mobility/routes/: controller.py  repository.py  router.py  schemas.py  service.py
src/modules/mobility/search/: __init__.py  router.py  schemas.py  service.py
src/modules/mobility/sptrans/: controller.py  router.py  service.py  worker.py
src/modules/mobility/stops/: controller.py  repository.py  router.py  schemas.py  service.py
src/modules/mobility/trips/: __init__.py  router.py  schemas.py  service.py
src/modules/mobility/vehicles/: __init__.py  repository.py  router.py  schemas.py  service.py
src/shared/cache/: __init__.py  service.py
