[project]
name = "urban-move-api"
version = "0.1.0"
description = "UrbanMove API - Mobilidade Urbana Inteligente"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.7",
    "fastapi[standard]>=0.136.0",
    "geoalchemy2>=0.19.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=5.3.1",
    "ruff>=0.15.11",
    "sqlalchemy[asyncio]>=2.0.49",
    "uuid-utils>=0.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version= "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/core/db/models/__init__.py" = ["E402", "F401"]
"src/core/db/models/*.py" = ["F821"]
